# openBlob

./: .gitignore  README.md  foundry.toml
.claude/skills/zisk-new-program/: SKILL.md
.claude/skills/zisk-precompiles/: SKILL.md
.claude/skills/zisk-setup/: SKILL.md
.claude/skills/zisk-tooling/: SKILL.md
collector/: .env.example  .gitignore  README.md  deno.json  package.json  server.ts  vite.config.ts
collector/app/: app.css  entry.server.tsx  root.tsx
collector/app/components/: connect-button.tsx  next-bundle-timer.tsx
collector/app/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
collector/app/lib/: blob-publisher.server.ts  bundler-cron.server.ts  cron.ts  kv.server.ts  utils.ts  wagmi.config.ts
collector/app/providers/: web3-provider.tsx
collector/app/routes/: api.microblobs.ts  api.microblobs.tx.$txHash.ts
collector/app/routes/_index/: route.tsx
collector/app/types/: deno.d.ts
script/: .snapshot.sh  Deploy.s.sol  Deposit.s.sol  PrepareProof.s.sol  SignTransfer.s.sol  SimulateFullFlow.s.sol  full-flow.sh
specs/: spec-amendments.md  spec.md
src/: IVerifier.sol  OpenBlob.sol
src/old_version/: OpenBlobOldVersion.sol
test/: OpenBlob.t.sol
ziskProgram/: Cargo.toml  README.md
ziskProgram/blob-sync/: Cargo.toml  PLAN.md  README.md
ziskProgram/blob-sync/nowkzg/src/: beacon.rs  decode.rs  kzg.rs  l1.rs  lib.rs  main.rs  sink.rs
ziskProgram/blob-sync/src/: beacon.rs  kzg.rs  l1.rs  lib.rs
ziskProgram/common/: Cargo.toml
ziskProgram/common/src/: lib.rs
ziskProgram/guest/: Cargo.toml
ziskProgram/guest/src/: main.rs
ziskProgram/host/: Cargo.toml  build.rs
ziskProgram/host/src/: main.rs
