[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-sol-types = "1.5.7"
# k256 feature pulls in `alloy_primitives::Signature::recover_address_from_msg`
# and `eip191_hash_message`, both of which the guest uses to verify per-entry
# Ethereum signatures (spec §5).
alloy-primitives = { version = "1.5.7", features = ["k256"] }
# RLP framing for the §4 logical payload stream.
alloy-rlp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Direct k256 dep is for signing (host-side `sample_inputs` and tests
# generate real EIP-191 signatures). The workspace `[patch.crates-io]`
# routes EC ops to ZisK's `syscall_secp256k1_*` precompiles when building
# for the zkVM target; native builds use the upstream software impl.
k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
bincode = "1.3"
hex = "0.4"
